Add and modify files

--- a/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
+++ b/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
@@ -51,7 +51,7 @@
     "    --name postgres-sql \\\n",
     "    -e POSTGRES_USER=matt \\\n",
     "    -e POSTGRES_PASSWORD=password \\\n",
-    "    -v ${pwd}/data:/var/lib/postgresql/data \\\n",
+    "    -v $(pwd)/data/:/var/lib/postgresql/data/ \\\n",
     "    -p 5000:5432 \\\n",
     "    postgres"
    ]
@@ -64,6 +64,44 @@
    "outputs": [],
    "source": [
     "!docker ps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9fb61b7-ad6c-4f13-8b9e-4db79d915973",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6c464a2-be3a-45a7-a72f-2eda5eb87cc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the data\n",
+    "# In a terminal\n",
+    "# sudo su\n",
+    "# cd $(pwd)/data/\n",
+    "# ls -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4075b08d-111e-4f33-9226-8bdefd784bfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test the data of the DB\n",
+    "# docker rm -f <CONTAINER_ID>\n",
+    "# run the docker run <...>\n",
+    "# check the pgAdmin\n",
+    "# the data persists"
    ]
   },
   {
@@ -185,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "id": "2af55e81-123b-4872-86eb-1d706eb3b5f8",
    "metadata": {},
    "outputs": [],
@@ -202,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 73,
    "id": "f8dc5f58-120d-483f-854a-606ed611a5cf",
    "metadata": {},
    "outputs": [],
@@ -213,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "id": "73ee3605-84ec-4203-8df1-1ba1707cf1c9",
    "metadata": {},
    "outputs": [],
@@ -227,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "id": "b7a33f38-2dad-4509-848c-1e26a284cc80",
    "metadata": {},
    "outputs": [],
@@ -240,10 +278,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "c1f902a3-a81f-4fd2-9e18-cfb349d77c5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 100, 'b')]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cur.execute(\"\"\"\n",
     "            SELECT *\n",
@@ -305,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 75,
    "id": "799bacac-36d1-4e6a-af57-70c22a86ed00",
    "metadata": {},
    "outputs": [],
