Add and modify files

--- a/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
+++ b/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f83c2a69-7a73-449c-a69f-1e78213db98b",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "2af55e81-123b-4872-86eb-1d706eb3b5f8",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
     "conn = psycopg2.connect(\"\"\"\n",
     "                        dbname=matt\n",
     "                        user=matt\n",
-    "                        host=34.42.241.44\n",
+    "                        host=<IP_ADDRESS>\n",
     "                        port=5000\n",
     "                        password=password\n",
     "                        \"\"\")"
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "f8dc5f58-120d-483f-854a-606ed611a5cf",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "73ee3605-84ec-4203-8df1-1ba1707cf1c9",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "b7a33f38-2dad-4509-848c-1e26a284cc80",
    "metadata": {},
    "outputs": [],
@@ -278,21 +278,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "c1f902a3-a81f-4fd2-9e18-cfb349d77c5d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 100, 'b')]"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cur.execute(\"\"\"\n",
     "            SELECT *\n",
@@ -316,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ebe586ad-a26d-40f3-81bc-66ea96e99810",
    "metadata": {},
    "outputs": [],
@@ -329,21 +318,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "7ff2fb88-31e6-407b-9631-d8333bf9d59f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 100, 'a'), (2, 100, 'b'), (3, 200, 'c')]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cur.execute(\"\"\"\n",
     "            SELECT *\n",
@@ -354,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "799bacac-36d1-4e6a-af57-70c22a86ed00",
    "metadata": {},
    "outputs": [],
