Add and modify files

--- a/10-Database/Site-App-with-Database.ipynb
+++ b/10-Database/Site-App-with-Database.ipynb
@@ -16,6 +16,37 @@
    "cell_type": "markdown",
    "id": "f5fdfcdf-448d-4037-be22-7c3e9ed91ca4",
    "metadata": {},
+   "source": [
+    "## Install and import libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "296373dc-818a-41f7-87ab-bd4ff53ff357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install streamlit psycopg2-binary -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1483f9ea-4ab6-4174-90a8-09c5d4ac772a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import streamlit as st\n",
+    "import psycopg2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96b8c7c9-1515-4b1c-be57-9e7d1d2f0bb0",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
