Add and modify files

--- a/10-Database/Site-App-with-Database.ipynb
+++ b/10-Database/Site-App-with-Database.ipynb
@@ -185,7 +185,9 @@
   {
    "cell_type": "markdown",
    "id": "f5fdfcdf-448d-4037-be22-7c3e9ed91ca4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Install and import libraries"
    ]
@@ -202,14 +204,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1483f9ea-4ab6-4174-90a8-09c5d4ac772a",
+   "execution_count": 1,
+   "id": "84d64610-0cce-4baa-9837-7ff57bfa449e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import streamlit as st\n",
     "import psycopg2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38d920e6-0540-4bae-8726-ba69ef895cea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Restart the terminal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a10c0470-db27-40b5-8054-bd28d2a7e1ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting env.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile env.py\n",
+    "# DB Credentials\n",
+    "DBNAME=\"matt\"\n",
+    "USER='matt'\n",
+    "HOST='35.193.80.15'\n",
+    "PORT='5000'\n",
+    "PASSWORD='password'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8d64eecd-8e42-44de-a6aa-c7e69296f19f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting app.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile app.py\n",
+    "# Import libraries\n",
+    "import streamlit as st\n",
+    "import psycopg2\n",
+    "import os\n",
+    "import time\n",
+    "from env import *\n",
+    "\n",
+    "# Header\n",
+    "st.write(\"# Notepad :notebook:\")\n",
+    "st.caption(\"\"\"\n",
+    "            Add your thoughts here! It will be stored in a database! \\n\n",
+    "            :warning: :red[Do not add sensitive data].\n",
+    "            \"\"\")\n",
+    "st.subheader(\"\",divider=\"rainbow\")\n",
+    "\n",
+    "# Variable\n",
+    "database_name = DBNAME\n",
+    "\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()\n",
+    "# Create a table if not exists\n",
+    "cur.execute(\"CREATE TABLE IF NOT EXISTS notes(id serial PRIMARY KEY, name varchar, header varchar, note varchar, time varchar)\")\n",
+    "con.commit()\n",
+    "\n",
+    "# Inputs\n",
+    "name = st.text_input(\"Your Name\")\n",
+    "header = st.text_input(\"Header\")\n",
+    "note = st.text_area(\"Note\",)\n",
+    "if st.button(\"Add a note\"):\n",
+    "    time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "    st.write(f\"\"\" \\n\n",
+    "            ### :pencil: {header} \\n\n",
+    "            {note}\n",
+    "            :man: {name} \\n\n",
+    "            :watch: {time}\"\"\")\n",
+    "    st.success(\"Successful Added.\")\n",
+    "    # st.balloons()\n",
+    "    ### Insert into adatabase\n",
+    "    SQL = \"INSERT INTO notes (name, header, note, time) VALUES(%s, %s, %s, %s);\"\n",
+    "    data = (name, header, note, time)\n",
+    "    cur.execute(SQL, data)\n",
+    "    con.commit()\n",
+    "    \n",
+    "# Previous Notes \n",
+    "st.subheader(\"\",divider=\"rainbow\")\n",
+    "st.write(\"### *Previous Notes*\")\n",
+    "# Write the data\n",
+    "cur.execute(\"\"\"\n",
+    "            SELECT * \n",
+    "            FROM notes\n",
+    "            ORDER BY time DESC\n",
+    "            \"\"\")\n",
+    "for name, header, note, time in cur.fetchall():\n",
+    "    st.write(f\"\"\" \\n\n",
+    "            ### :pencil: {header} \\n\n",
+    "            {note}\n",
+    "            :man: {name} \\n\n",
+    "            :watch: {time}\"\"\")\n",
+    "    st.subheader(\"\",divider=\"gray\")\n",
+    "    \n",
+    "# Close Connection\n",
+    "cur.close()\n",
+    "con.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5962c797-a504-49e7-bc65-27419335d62a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile Dockerfile\n",
+    "FROM python\n",
+    "WORKDIR /app\n",
+    "RUN pip install streamlit psycopg2-binary -q\n",
+    "COPY app.py .\n",
+    "EXPOSE 8501\n",
+    "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f5d68cd-2649-4d55-b58d-3cc36fbd5ee5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build an image\n",
+    "!docker build -t notepad-app . -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50203a8c-cbcd-48b5-a4c2-127acab681fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List images\n",
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1152ecb4-777d-42b1-9aa2-ac49325d34cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the app in detached mode\n",
+    "!docker run -d -p 8501:8501 -v $(pwd):/app notepad-app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f216e25-7abd-452b-a925-c945aea6dab8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker ps -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21df7620-6aca-47fc-942e-05403f7105f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove all docker ps\n",
+    "# !docker rm -f $(docker ps -aq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71b1065a-f0ff-4dde-8070-2e65ec5d4079",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
