--- a/10-Database/Site-App-with-Database.ipynb
+++ b/10-Database/Site-App-with-Database.ipynb
@@ -16,7 +16,6 @@
    "cell_type": "markdown",
    "id": "57dc9814-8e2a-4ee9-bf9b-04b22be05f9d",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -154,7 +153,7 @@
    "outputs": [],
    "source": [
     "!gcloud compute --project=$(gcloud config get project) firewall-rules create ports \\\n",
-    "    --direction=INGRESS --priority=1000 --network=default --action=ALLOW --rules=tcp:5000,tcp:8000,tcp:5401,tcp:9000 --source-ranges=0.0.0.0/0"
+    "    --direction=INGRESS --priority=1000 --network=default --action=ALLOW --rules=tcp:5000,tcp:8000,tcp:8501,tcp:9000 --source-ranges=0.0.0.0/0"
    ]
   },
   {
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "84d64610-0cce-4baa-9837-7ff57bfa449e",
    "metadata": {},
    "outputs": [],
@@ -225,18 +224,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "d0b8fd89-8951-4132-9f5e-a5616738b773",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4758f8a4-3079-4c4a-993d-f96874cb6f26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a10c0470-db27-40b5-8054-bd28d2a7e1ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting env.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile env.py\n",
     "# DB Credentials\n",
@@ -249,20 +260,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8d64eecd-8e42-44de-a6aa-c7e69296f19f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting app.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -347,7 +350,7 @@
     "FROM python\n",
     "WORKDIR /app\n",
     "RUN pip install streamlit psycopg2-binary -q\n",
-    "COPY app.py .\n",
+    "COPY app.py env.py ./app/\n",
     "EXPOSE 8501\n",
     "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\"]"
    ]
@@ -355,12 +358,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f5d68cd-2649-4d55-b58d-3cc36fbd5ee5",
+   "id": "4e931245-25db-426f-97cd-911a347a0cb4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build an image\n",
-    "!docker build -t notepad-app . -q"
+    "# Build an image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5798eddd-dec2-49bb-82bf-2b32a1a8de83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker build -t app . -q"
    ]
   },
   {
@@ -382,7 +394,7 @@
    "outputs": [],
    "source": [
     "# Run the app in detached mode\n",
-    "!docker run -d -p 8501:8501 -v $(pwd):/app notepad-app"
+    "!docker run -d -p 8501:8501 -v $(pwd):/app app"
    ]
   },
   {
