Add and modify files

--- a/10-Database/Site-App-with-Database.ipynb
+++ b/10-Database/Site-App-with-Database.ipynb
@@ -234,10 +234,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4758f8a4-3079-4c4a-993d-f96874cb6f26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jupyter/tech-stack/10-Database/app\n"
+     ]
+    }
+   ],
    "source": [
     "cd app"
    ]
@@ -260,12 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8d64eecd-8e42-44de-a6aa-c7e69296f19f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting app.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -305,11 +321,11 @@
     "if st.button(\"Add a note\"):\n",
     "    time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
     "    st.write(f\"\"\" \\n\n",
-    "            ### :pencil: {header} \\n\n",
-    "            {note}\n",
+    "            ##### :pencil: {header} \\n\n",
+    "            #### {note} \\n\n",
     "            :man: {name} \\n\n",
     "            :watch: {time}\"\"\")\n",
-    "    st.success(\"Successful Added.\")\n",
+    "    st.success(\"Successfully Added.\")\n",
     "    # st.balloons()\n",
     "    ### Insert into adatabase\n",
     "    SQL = \"INSERT INTO notes (name, header, note, time) VALUES(%s, %s, %s, %s);\"\n",
@@ -326,10 +342,10 @@
     "            FROM notes\n",
     "            ORDER BY time DESC\n",
     "            \"\"\")\n",
-    "for name, header, note, time in cur.fetchall():\n",
+    "for _, name, header, note, time in cur.fetchall():\n",
     "    st.write(f\"\"\" \\n\n",
-    "            ### :pencil: {header} \\n\n",
-    "            {note}\n",
+    "            ##### :pencil: {header} \\n\n",
+    "            #### {note} \\n\n",
     "            :man: {name} \\n\n",
     "            :watch: {time}\"\"\")\n",
     "    st.subheader(\"\",divider=\"gray\")\n",
