Add and modify files

--- a/10-Database/Site-App-with-Database.ipynb
+++ b/10-Database/Site-App-with-Database.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 101,
    "id": "8d64eecd-8e42-44de-a6aa-c7e69296f19f",
    "metadata": {
     "tags": []
@@ -317,7 +317,7 @@
     "# Inputs\n",
     "name = st.text_input(\"Your Name\")\n",
     "header = st.text_input(\"Header\")\n",
-    "note = st.text_area(\"Note\",)\n",
+    "note = st.text_area(\"Note\")\n",
     "if st.button(\"Add a note\"):\n",
     "    time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
     "    st.write(f\"\"\" \\n\n",
@@ -342,17 +342,29 @@
     "            FROM notes\n",
     "            ORDER BY time DESC\n",
     "            \"\"\")\n",
-    "for _, name, header, note, time in cur.fetchall():\n",
+    "for id, name, header, note, time in cur.fetchall():\n",
     "    st.write(f\"\"\" \\n\n",
     "            ##### :pencil: {header} \\n\n",
     "            #### {note} \\n\n",
     "            :man: {name} \\n\n",
     "            :watch: {time}\"\"\")\n",
+    "#    if st.button(f\"UPDATE ID #: {id}\"):\n",
+    "#        name = st.text_input(f\"Your Name (ID #: {id})\", name)\n",
+    "#        header = st.text_input(f\"Header (ID #: {id})\", header)\n",
+    "#        note = st.text_area(f\"Note (ID #: {id})\", note)\n",
+    "#        if st.button(f\"CONFIRM UPDATE ID #: {id}\"):\n",
+    "#            cur.execute(f\"UPDATE notes SET id={id}, name={name}, header={header}, note={note} WHERE id = {id}\")\n",
+    "#            con.commit()\n",
+    "#            st.success(\"Successfully Edited.\")\n",
+    "    if st.button(f\"DELETE ID #: {id}\"):\n",
+    "        cur.execute(f\"DELETE FROM notes WHERE id = {id}\")\n",
+    "        con.commit()\n",
+    "        st.success(\"Successfully Deleted.\")\n",
     "    st.subheader(\"\",divider=\"gray\")\n",
     "    \n",
     "# Close Connection\n",
     "cur.close()\n",
-    "con.close()\n"
+    "con.close()"
    ]
   },
   {
