Add and modify files

--- a/10-Database/Site-App-with-Database.ipynb
+++ b/10-Database/Site-App-with-Database.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "4758f8a4-3079-4c4a-993d-f96874cb6f26",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 93,
    "id": "8d64eecd-8e42-44de-a6aa-c7e69296f19f",
    "metadata": {
     "tags": []
@@ -291,14 +291,16 @@
     "import time\n",
     "from env import *\n",
     "\n",
+    "st.set_page_config(page_title=\"Matt Cloud Tech\",\n",
+    "                   page_icon=\":cloud:\",\n",
+    "                   menu_items={\n",
+    "                       'About':\"# Matt Cloud Tech\"})\n",
     "# Header\n",
-    "st.write(\"# Notepad :notebook:\")\n",
+    "st.header(\"Notepad :notebook:\",divider=\"rainbow\")\n",
     "st.caption(\"\"\"\n",
     "            Add your thoughts here! It will be stored in a database! \\n\n",
-    "            :warning: :red[Do not add sensitive data].\n",
+    "            :warning: :red[Do not add sensitive data.]\n",
     "            \"\"\")\n",
-    "st.subheader(\"\",divider=\"rainbow\")\n",
-    "\n",
     "# Variable\n",
     "database_name = DBNAME\n",
     "\n",
@@ -334,7 +336,7 @@
     "    con.commit()\n",
     "    \n",
     "# Previous Notes \n",
-    "st.subheader(\"\",divider=\"rainbow\")\n",
+    "st.divider()\n",
     "st.write(\"### *Previous Notes*\")\n",
     "# Write the data\n",
     "cur.execute(\"\"\"\n",
@@ -353,7 +355,7 @@
     "#        header = st.text_input(f\"Header (ID #: {id})\", header)\n",
     "#        note = st.text_area(f\"Note (ID #: {id})\", note)\n",
     "#        if st.button(f\"CONFIRM UPDATE ID #: {id}\"):\n",
-    "#            cur.execute(f\"UPDATE notes SET id={id}, name={name}, header={header}, note={note} WHERE id = {id}\")\n",
+    "#            cur.execute(f\"UPDATE notes SET id={id}, name='{name}', header='{header}', note='{note}' WHERE id = {id}\")\n",
     "#            con.commit()\n",
     "#            st.success(\"Successfully Edited.\")\n",
     "    if st.button(f\"DELETE ID #: {id}\"):\n",
@@ -455,9 +457,111 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "8e9d4fdf-ec38-4a79-87cf-ef3a6dcc121b",
+   "metadata": {},
+   "source": [
+    "#### Connect to the database from Jupyter Lab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "c05ff6f5-8c75-41fb-a177-8fdf3729fcf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries\n",
+    "import psycopg2\n",
+    "import os\n",
+    "import time\n",
+    "from env import *\n",
+    "\n",
+    "# Variable\n",
+    "database_name = DBNAME\n",
+    "\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "5b0c854a-774a-4347-91d6-2fd644e65aa7",
+   "metadata": {},
+   "source": [
+    "SQL = \"\"\n",
+    "cur.execute(SQL)\n",
+    "con.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "9a4de8de-3c04-49b4-a3aa-0e524db8360b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(46, 'Matt', 'Hello', 'Hi', 'Date: 2023-11-07 | Time: 11:06:31 UTC')]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur = con.cursor()\n",
+    "SQL = \"SELECT * FROM notes\"\n",
+    "cur.execute(SQL)\n",
+    "cur.fetchall()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96b8c7c9-1515-4b1c-be57-9e7d1d2f0bb0",
+   "id": "e067f08a-9bec-4c18-8837-2ad3a1bebbb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "d7bd8107-7ef7-43af-a866-d8bde4199daa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id = 46\n",
+    "name='Matt'\n",
+    "header='Hello'\n",
+    "note='Hi'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "a0c69bf2-2e6d-4702-acac-06e217b003e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(f\"UPDATE notes SET id={id}, name='{name}', header='{header}', note='{note}' WHERE id = {id}\")\n",
+    "con.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dfec642-2bc8-4b11-886c-bdd2f83af6ea",
    "metadata": {},
    "outputs": [],
    "source": []
