Add and modify files

--- a/10-Database/Site-App-with-Database.ipynb
+++ b/10-Database/Site-App-with-Database.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 139,
    "id": "8d64eecd-8e42-44de-a6aa-c7e69296f19f",
    "metadata": {
     "tags": []
@@ -291,10 +291,29 @@
     "import time\n",
     "from env import *\n",
     "\n",
+    "#----------Page Configuration----------# \n",
     "st.set_page_config(page_title=\"Matt Cloud Tech\",\n",
     "                   page_icon=\":cloud:\",\n",
     "                   menu_items={\n",
     "                       'About':\"# Matt Cloud Tech\"})\n",
+    "#----------About Me Section----------#\n",
+    "st.title(\":cloud: Matt Cloud Tech\")\n",
+    "st.subheader(\"\", divider=\"rainbow\")\n",
+    "\n",
+    "st.write(\"\"\"\n",
+    "        ### Good day :wave:.\n",
+    "        ### My name is :blue[Matt]. I am a Cloud Technology Enthusiast.\n",
+    "        ### Currently, I am learning and building Cloud Infrastructure, Data and CI/CD Pipelines, and Intelligent Systems. \n",
+    "        \"\"\")\n",
+    "\n",
+    "st.divider()\n",
+    "st.write(\":link: :computer: [Personal Website](https://)\")\n",
+    "st.write(\":link: :repository: [Project Repository](https://)\")\n",
+    "st.write(\":link: :notebook: [Blog](https://)\")\n",
+    "st.write(\":link: :: [Connect with me](https://)\")\n",
+    "\n",
+    "#----------Notepad----------#\n",
+    "# Notepad Section\n",
     "# Header\n",
     "st.header(\"Notepad :notebook:\",divider=\"rainbow\")\n",
     "st.caption(\"\"\"\n",
@@ -363,6 +382,64 @@
     "        con.commit()\n",
     "        st.success(\"Successfully Deleted.\")\n",
     "    st.subheader(\"\",divider=\"gray\")\n",
+    "    \n",
+    "# Close Connection\n",
+    "cur.close()\n",
+    "con.close()\n",
+    "\n",
+    "#----------Counter----------#\n",
+    "# Title\n",
+    "st.header(\"Counter App\")\n",
+    "st.caption(\"\"\"\n",
+    "            Count every request in this app.\n",
+    "            \"\"\")\n",
+    "st.subheader(\"\",divider=\"rainbow\")\n",
+    "\n",
+    "# Variable\n",
+    "database_name = DBNAME\n",
+    "\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()\n",
+    "# Create a table if not exists\n",
+    "cur.execute(\"CREATE TABLE IF NOT EXISTS counter(id serial PRIMARY KEY, view int, time varchar)\")\n",
+    "con.commit()\n",
+    "\n",
+    "# Counter\n",
+    "import time\n",
+    "time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "view = 1\n",
+    "### Insert into a database\n",
+    "SQL = \"INSERT INTO counter (view, time) VALUES(%s, %s);\"\n",
+    "data = (view, time)\n",
+    "cur.execute(SQL, data)\n",
+    "con.commit()\n",
+    "\n",
+    "# Total views\n",
+    "cur.execute(\"\"\"\n",
+    "                SELECT SUM(view) \n",
+    "                FROM counter\n",
+    "                \"\"\")\n",
+    "st.write(f\"### Total views: **{cur.fetchone()[0]}**\")\n",
+    "\n",
+    "# Current view\n",
+    "st.write(f\"Current: {time}\")\n",
+    "# Previous hits\n",
+    "st.divider()\n",
+    "st.write(\"### *Previous Views*\")\n",
+    "# Write the data\n",
+    "cur.execute(\"\"\"\n",
+    "            SELECT * \n",
+    "            FROM counter\n",
+    "            ORDER BY time DESC\n",
+    "            \"\"\")\n",
+    "for _, _, time in cur.fetchall():\n",
+    "    st.text(f\"{time}\")\n",
     "    \n",
     "# Close Connection\n",
     "cur.close()\n",
@@ -554,6 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Update\n",
     "cur.execute(f\"UPDATE notes SET id={id}, name='{name}', header='{header}', note='{note}' WHERE id = {id}\")\n",
     "con.commit()"
    ]
