Add and modify files

--- a/10-Database/Site-App-with-Database.ipynb
+++ b/10-Database/Site-App-with-Database.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 142,
    "id": "8d64eecd-8e42-44de-a6aa-c7e69296f19f",
    "metadata": {
     "tags": []
@@ -308,9 +308,9 @@
     "\n",
     "st.divider()\n",
     "st.write(\":link: :computer: [Personal Website](https://)\")\n",
-    "st.write(\":link: :repository: [Project Repository](https://)\")\n",
+    "st.write(\":link: :book: [Project Repository](https://)\")\n",
     "st.write(\":link: :notebook: [Blog](https://)\")\n",
-    "st.write(\":link: :: [Connect with me](https://)\")\n",
+    "st.write(\":link: :hand: [Connect with me](https://)\")\n",
     "\n",
     "#----------Notepad----------#\n",
     "# Notepad Section\n",
