Add and modify files

--- a/10-Database/py-shutil-subprocess-requests.ipynb
+++ b/10-Database/py-shutil-subprocess-requests.ipynb
@@ -14,7 +14,59 @@
    "id": "811121d7-54b6-4ae4-97d6-26f811a1e670",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import shutil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b411dc9-93c7-4e0a-831b-3381b90930ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(shutil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeda0786-c920-4b41-8eab-00529b28ff41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(shutil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e86db84-a939-4c39-a049-924e613c2811",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "938752f8-86c1-46ea-87c4-1d4a0c172190",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(subprocess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6ad79cb-d814-4399-b5bf-da86233114be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(subprocess)"
+   ]
   }
  ],
  "metadata": {
